hphp/hack/test/typecheck/meth_caller/meth_caller7.php.exp
File "meth_caller7.php", line 9, characters 15-16:
Invalid argument (Typing[4110])
File "meth_caller7.php", line 4, characters 24-26:
Expected `int`
File "meth_caller7.php", line 9, characters 15-16:
But got `string`
File "meth_caller7.php", line 9, characters 19-19:
Invalid argument (Typing[4110])
File "meth_caller7.php", line 4, characters 32-37:
Expected `string`
File "meth_caller7.php", line 9, characters 19-19:
But got `int`
